force-app/main/default/objects/MotorcycleSituation__c/MotorcycleSituation__c.object-meta.xml
<CustomObject>
    <label>Motorcycle Situation</label>
    <nameField>
        <displayFormat>MO-{000000000}</displayFormat>
        <label>Motorcycle Situation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Motorcycle Situations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>