force-app/main/default/objects/MotorcycleSituation__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Symptom_Condition__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Condition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Symptom_Condition__c</referenceTo>
    <relationshipLabel>Motorcycle Situations (Condition)</relationshipLabel>
    <relationshipName>Motorcycle_Situations1</relationshipName>
    <type>Lookup</type>
</CustomField>