force-app/main/default/objects/MotorcycleSituation__c/fields/Condition_Comment__c.field-meta.xml
<CustomField>
    <fullName>Condition_Comment__c</fullName>
    <label>Condition Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>