force-app/main/default/objects/MotorcycleSituation__c/fields/Dealer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Comment__c</fullName>
    <label>Dealer Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>