force-app/main/default/objects/MotorcycleSituation__c/fields/Fault_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fault_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fault Start Date</label>
    <type>Date</type>
</CustomField>