force-app/main/default/objects/MotorcycleSituation__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Motorcycle Situations</relationshipLabel>
    <relationshipName>Motorcycle_Situations</relationshipName>
    <type>Lookup</type>
</CustomField>