force-app/main/default/objects/MotorcycleSituation__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>PCA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Motorcycle Situations</relationshipLabel>
    <relationshipName>Motorcycle_Situations</relationshipName>
    <type>Lookup</type>
</CustomField>