force-app/main/default/objects/MotorcycleSituation__c/fields/Process_Comment__c.field-meta.xml
<CustomField>
    <fullName>Process_Comment__c</fullName>
    <formula>Symptom_Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Comment</label>
    <type>Text</type>
</CustomField>