force-app/main/default/objects/MotorcycleSituation__c/fields/Repair_Description__c.field-meta.xml
<CustomField>
    <fullName>Repair_Description__c</fullName>
    <label>Repair Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>