force-app/main/default/objects/MotorcycleSituation__c/fields/Symptom_Comment__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Comment__c</fullName>
    <label>Symptom Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>