force-app/main/default/objects/MotorcycleSituation__c/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Claim</label>
    <type>Checkbox</type>
</CustomField>