force-app/main/default/objects/MotorcycleSituation__c/validationRules/The_fault_date_earlier_than_order_date.validationRule-meta.xml
<ValidationRule>
    <fullName>The_fault_date_earlier_than_order_date</fullName>
    <active>true</active>
    <errorConditionFormula>Fault_Start_Date__c &gt; Order__r.EffectiveDate</errorConditionFormula>
    <errorDisplayField>Fault_Start_Date__c</errorDisplayField>
    <errorMessage>The Fault Date can not be later than the Order Start Date</errorMessage>
</ValidationRule>