force-app/main/default/objects/MotorcycleSituation__c/validationRules/The_fault_date_later_than_invoice_date.validationRule-meta.xml
<ValidationRule>
    <fullName>The_fault_date_later_than_invoice_date</fullName>
    <active>true</active>
    <errorConditionFormula>Fault_Start_Date__c &lt;  Order__r.Asset__r.Invoiced_Date__c</errorConditionFormula>
    <errorDisplayField>Fault_Start_Date__c</errorDisplayField>
    <errorMessage>The Fault Date can not be earlier than the Invoice Date</errorMessage>
</ValidationRule>