force-app/main/default/objects/MotorcycleSituation__c/validationRules/The_fault_start_date_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>The_fault_start_date_less_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Fault_Start_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Fault_Start_Date__c</errorDisplayField>
    <errorMessage>The fault start date can not bigger than today</errorMessage>
</ValidationRule>